5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1593_1806.log
== TEST (2019-03-28 10:54:52) 
-- CODE:
from math import *
factorial(n)= 1− 365!/(365−n)!⋅1/365**n

-- ERROR:
File "XXXX", line 2
    factorial(n)= 1− 365!/(365−n)!⋅1/365**n
                   ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:24) 
-- CODE:
from math import
n = float(input: "no. de pessoas: ")
factorial(n)= 1 − (365!/(365−n)!) * 1/(365**n)


-- ERROR:
File "XXXX", line 1
    from math import
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:40) 
-- CODE:
from math import *
n = int(input: "no. de pessoas: ")
p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)


-- ERROR:
File "XXXX", line 2
    n = int(input: "no. de pessoas: ")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:42) 
-- CODE:
from math import *
n = int(input: "no. de pessoas: ")
p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)


-- ERROR:
File "XXXX", line 2
    n = int(input: "no. de pessoas: ")
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:03:03) 
-- CODE:
from math import *
n = int(input("no. de pessoas: ")
p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)


-- ERROR:
File "XXXX", line 3
    p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:03:12) 
-- CODE:
from math import *
n = int(input("no. de pessoas: "))
p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)


-- ERROR:
File "XXXX", line 3
    p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:03:52) 
-- CODE:
from math import *
n = int(input("no. de pessoas: "))
p = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)


-- ERROR:
File "XXXX", line 3
    p = 1 − (factorial(365) / factorial(365−n)) * 1/(365**n)
          ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:12) 
-- CODE:
from math import *
n = int(input("no. de pessoas: "))
p = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(p)


-- OUTPUT:
0.16702478883806438
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:19) 
-- CODE:
from math import *
n = int(input("no. de pessoas: "))
p = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(round(p*100), 2)


-- OUTPUT:
17 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:05:48) 
-- CODE:
from math import *
n = int(input("no. de pessoas: "))
p = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(round(p*100, 2))


-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:05:56) 
-- CODE:
from math import *
n = int(input("no. de pessoas: "))
p = 1 - (factorial(365) / factorial(365 - n)) * 1/(365**n)
print(round(p*100, 2))


-- EXECUTION TIME:
0.122452
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
